hphp/test/zend/good/Zend/tests/use_function/includes/global_bar.php
<?hh

function bar() {
    return 'global bar';
}
