hphp/test/zend/bad/bug55524.php
<?php

class Base {}

trait Foo extends Base {
    function bar() {}
}

echo 'DONE';
?>